@@ -36,6 +36,7 @@ import org.apache.lucene.document.Document;
 import org.apache.lucene.index.IndexableField;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.highlight.*;
+import org.apache.lucene.search.vectorhighlight.BoundaryScanner;
 import org.apache.lucene.search.vectorhighlight.FastVectorHighlighter;
 import org.apache.lucene.search.vectorhighlight.FieldQuery;
 import org.apache.lucene.search.vectorhighlight.FragListBuilder;
@@ -83,6 +84,7 @@ public class DefaultSolrHighlighter extends SolrHighlighter implements PluginInf
     fragmenters.clear();
     fragListBuilders.clear();
     fragmentsBuilders.clear();
+    boundaryScanners.clear();
 
     // Load the fragmenters
     SolrFragmenter frag = solrCore.initPlugins(info.getChildren("fragmenter") , fragmenters,SolrFragmenter.class,null);
@@ -115,9 +117,15 @@ public class DefaultSolrHighlighter extends SolrHighlighter implements PluginInf
     if( fragsBuilder == null ) fragsBuilder = new ScoreOrderFragmentsBuilder();
     fragmentsBuilders.put( "", fragsBuilder );
     fragmentsBuilders.put( null, fragsBuilder );
+
+    // Load the BoundaryScanners
+    SolrBoundaryScanner boundaryScanner = solrCore.initPlugins(info.getChildren("boundaryScanner"),
+        boundaryScanners, SolrBoundaryScanner.class, null);
+    if(boundaryScanner == null) boundaryScanner = new SimpleBoundaryScanner();
+    boundaryScanners.put("", boundaryScanner);
+    boundaryScanners.put(null, boundaryScanner);
     
     initialized = true;
-
   }
   //just for back-compat with the deprecated method
   private boolean initialized = false;
@@ -144,6 +152,10 @@ public class DefaultSolrHighlighter extends SolrHighlighter implements PluginInf
     SolrFragmentsBuilder fragsBuilder = new ScoreOrderFragmentsBuilder();
     fragmentsBuilders.put( "", fragsBuilder );
     fragmentsBuilders.put( null, fragsBuilder );
+    
+    SolrBoundaryScanner boundaryScanner = new SimpleBoundaryScanner();
+    boundaryScanners.put("", boundaryScanner);
+    boundaryScanners.put(null, boundaryScanner);
   }
 
   /**
@@ -311,7 +323,8 @@ public class DefaultSolrHighlighter extends SolrHighlighter implements PluginInf
   }
   
   protected FragmentsBuilder getFragmentsBuilder( String fieldName, SolrParams params ){
-    return getSolrFragmentsBuilder( fieldName, params ).getFragmentsBuilder( params );
+    BoundaryScanner bs = getBoundaryScanner(fieldName, params);
+    return getSolrFragmentsBuilder( fieldName, params ).getFragmentsBuilder( params, bs );
   }
   
   private SolrFragmentsBuilder getSolrFragmentsBuilder( String fieldName, SolrParams params ){
@@ -321,6 +334,15 @@ public class DefaultSolrHighlighter extends SolrHighlighter implements PluginInf
       throw new SolrException( SolrException.ErrorCode.BAD_REQUEST, "Unknown fragmentsBuilder: " + fb );
     }
     return solrFb;
+  }
+  
+  private BoundaryScanner getBoundaryScanner(String fieldName, SolrParams params){
+    String bs = params.getFieldParam(fieldName, HighlightParams.BOUNDARY_SCANNER);
+    SolrBoundaryScanner solrBs = boundaryScanners.get(bs);
+    if(solrBs == null){
+      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Unknown boundaryScanner: " + bs);
+    }
+    return solrBs.getBoundaryScanner(fieldName, params);
   }
   
   /**
